docs/tests/parser/types/invalid/TypeFuncPointerTrailingComma.b
fn void test() {
    let fp int(int, float,) callback;
}
